Added code fencing

--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
     </body>
     <h3> GUNTUR</h3>
     <P>Guntur is a vibrant <b>city located in the Indian state of Andhra Pradesh</b>. It is renowned for its rich cultural heritage, <b>historical significance</b>, and its contribution to the agricultural landscape of India. </P>
+    <hr>
+    <h2>Activities to do at Guntur:</h2>
+    <ol>
+       1: Amaravati Buddhist Heritage</br>
+       2: Explore Undavalli Caves</br>
+       3: Kondavid Fort</br>
+       4: Mangalagiri Temple</br>
+    </ol>
 </html>
