Added code fencing

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <hr>
     <h2>Activities to do at Guntur:</h2>
     <ol>
-       1: Amaravati Buddhist Heritage</br>
-       2: Explore Undavalli Caves</br>
-       3: Kondavid Fort</br>
-       4: Mangalagiri Temple</br>
-    </ol>
+       <li>Amaravati Buddhist Heritage</li>
+       <li> Explore Undavalli Caves</li>
+       <li> Kondavid Fort</li>
+       <li> Mangalagiri Temple</li>
+</ol>
+<h2>Food to try in Guntur</h2>
+<ul>
+    <li>Andhra Biryani</li>
+    <li>Andhra Fish Curry</li>
+    <li>Bobbatlu (Puran Poli)</li>
+</ul>
 </html>
