--- a/mystats.html
+++ b/mystats.html
@@ -5,8 +5,8 @@
         <p> Hi to everyone .I'm Venkata Lakshmi Nali and i have completed my undergraduation in the stream of computer science and engineering from KHIT Guntur Andhra Pradesh.</p>
     </body>
     <h3>MY FAVOURITE FOOD IS ANDHRA FISH CURRY</h3>
-    <p><img src="fish curry1.jpg" alt="ANDHRA FISH CURRY" width="100" height="200">
+    <p><img src="fish curry1.jpg" alt="ANDHRA FISH CURRY" width="300" height="300"></p><br>
      
-        Andhra fish curry, also known as "Andhra Chepala Pulusu," is a popular and flavorful dish from the southern Indian state of Andhra Pradesh. This dish is known for its distinctive blend of spices and tangy flavors.
+    Andhra fish curry, also known as "Andhra Chepala Pulusu," is a popular and flavorful dish from the southern Indian state of Andhra Pradesh. This dish is known for its distinctive blend of spices and tangy flavors.
     
     </p>
