Added code fencing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <li>Andhra Fish Curry</li>
     <li>Bobbatlu (Puran Poli)</li>
     <h4>Mystats link</h4> <a href="mystats.html" >Mystats link</a>
+<hr>
+<h2>Table for Sports</h2>
+| Sport | Why to Play | Hours per Week |
+| ------------- | ------------- | ------------ |
+| Soccer | Promotes cardiovascular fitness, agility, and teamwork. | 3-15 hours |
+|Tennis | Enhances hand-eye coordination, cardiovascular health. | 2-15 hours |
+| Swimming | Low-impact and suitable for all fitness levels. | 2-5 hours |
+| Basketball |Great for socializing and having fun. | 7 hours |
+<p>A human activity involving physical exertion and skill as the primary focus of the activity, with elements of competition or social participation where rules and patterns of behaviour governing the activity exist formally through organisations and is generally recognised as a sport.</p>
 
 
 </ul>
