Added code fencing

--- a/index.html
+++ b/index.html
@@ -24,16 +24,51 @@
     <li>Andhra Fish Curry</li>
     <li>Bobbatlu (Puran Poli)</li>
     <h4>Mystats link</h4> <a href="mystats.html" >Mystats link</a>
-<hr>
-<h2>Table for Sports</h2>
-| Sport | Why to Play | Hours per Week |
-| ------------- | ------------- | ------------ |
-| Soccer | Promotes cardiovascular fitness, agility, and teamwork. | 3-15 hours |
-|Tennis | Enhances hand-eye coordination, cardiovascular health. | 2-15 hours |
-| Swimming | Low-impact and suitable for all fitness levels. | 2-5 hours |
-| Basketball |Great for socializing and having fun. | 7 hours |
-<p>A human activity involving physical exertion and skill as the primary focus of the activity, with elements of competition or social participation where rules and patterns of behaviour governing the activity exist formally through organisations and is generally recognised as a sport.</p>
-
-
 </ul>
+<hr>
+
+<style>
+    table, th, td {
+      border:1px solid black;
+    }
+    </style>
+    <body>
+    
+    <h2>A basic HTML Sports table</h2>
+    
+    <table style="width:100%">
+      <tr>
+        <th>NAME OF THE SPORT</th>
+        <th>WHY TO PLAY</th>
+        <th>HOURS TO PLAY</th>
+      </tr>
+      <tr>
+        <td>Tennis</td>
+        <td>Enhances hand-eye coordination, cardiovascular health.</td>
+        <td>3 hours</td>
+      </tr>
+      <tr>
+        <td>Soccer</td>
+        <td>Promotes cardiovascular fitness, agility, and teamwork. </td>
+        <td>7 hours</td>
+       </tr>
+       <tr>
+         <td>BasketBall</td>
+         <td>Great for socializing and having fun.</td>
+         <td>5 hours</td>
+       </tr>  
+      </tr>
+    </table>
+<p>A human activity involving physical exertion and skill as the primary focus of the activity, with elements of competition or social participation where rules and patterns of behaviour governing the activity exist formally through organisations and is generally recognised as a sport.</p>
+      </body>
+<hr>
+<h3>Stackflow Link</h3>
+<a href="https://stackoverflow.com/questions/13883955/android-ios-htaccess-detection-and-redirecting" >stackoverflow link</a>
+<h3>Snippet htaccess Link</h3>
+<a href="https://css-tricks.com/snippets/htaccess/">code snippet link</a>"
+<pre>
+RewriteCond %{HTTP_USER_AGENT} ^.*iPad.*$
+RewriteRule ^(.*)$ http://ipad.yourdomain.com [R=301]
+</pre>
+
 </html>
