Added code fencing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     </head>
     <body>
+      <h3>Link ti Bonus</h3>
+    </h4> <a href="bonus.html" >Bonus link</a>
         <h1>VENKATA LAKSHMI NALI</h1>
 
     </body>
