Added code fencing

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
     </head>
     <body>
-      <h3>Link ti Bonus</h3>
-    </h4> <a href="bonus.html" >Bonus link</a>
+      <h3>Link to Bonus s: <a href="bonus.html" >Bonus link</a> </h3>
         <h1>VENKATA LAKSHMI NALI</h1>
 
     </body>
