Added code fencing

--- a/bonus.html
+++ b/bonus.html
@@ -12,8 +12,8 @@
 
         <h2> Neha Yadav </h2>
 
-        <h2> Profession:</h2>
-        Videographer
+        <h2> Profession : Videographer</h2>
+        
         <h2>Physical or personality traits </h2>
 
         <ul>
